plugins {
    id 'base'
    id 'org.springframework.boot' version '4.0.1' apply false
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    group = 'kr.co.jparangdev.boardbuddy'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

// 하위 모듈에만 공통으로 적용될 설정입니다.
subprojects {
    // 공통으로 사용할 플러그인을 적용합니다.
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    // Spring Boot의 BOM(Bill of Materials)을 가져와 의존성 버전을 관리합니다.
    // 이렇게 하면 하위 모듈에서 스프링 관련 의존성을 추가할 때 버전을 명시하지 않아도 됩니다.
    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:4.0.1"
        }
    }

    // 모든 하위 모듈의 테스트에 JUnit Platform을 사용하도록 설정합니다.
    tasks.named('test', Test) {
        useJUnitPlatform()
    }

    dependencies {

        // 공통 의존성인 Lombok을 추가합니다. 버전은 위에서 가져온 BOM에 의해 관리됩니다.
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
    }
}
